<resources>
    <string name="app_name">하이파이브풋볼</string>
    <string name="no_items">데이터가 없습니다.\n즐거운 하루되세요.</string>
    <string name="no_schedule_items">경기일정이 없습니다.\n즐거운 하루되세요.</string>
    <string name="no_best_content">베스트글이 없습니다.\n즐거운 하루되세요.</string>
    <string name="no_more_load_retry">No more items to load. Refresh to retry.</string>
    <string name="endless_disabled">No more items to load (max reached).</string>
    <string name="endless_cancel">Cancelled by the user.</string>
    <string name="endless_error">An error occurred while loading more items.</string>
    <string name="activity_title_login">로그인</string>
    <string name="activity_title_signup">회원가입</string>
    <string name="activity_title_settings">설정</string>
    <string name="activity_title_editor_post">신규작성</string>
    <string name="activity_title_editor_modify">수정</string>
    <string name="bottomnav_title_0">게시판</string>
    <string name="bottomnav_title_1">일정</string>
    <string name="bottomnav_title_2">채팅</string>
    <string name="bottomnav_title_3">요약</string>
    <string name="bottomnav_title_4">내소식</string>
    <string name="action_scrap">스크랩</string>
    <string name="menu_login">로그인</string>
    <string name="menu_search">검색</string>
    <string name="menu_done">완료</string>
    <string name="menu_submit">글올리기</string>
    <string name="menu_report">신고하기</string>
    <string name="menu_delete">삭제하기</string>
    <string name="menu_edit">수정하기</string>
    <string name="menu_filter">필터</string>
    <string name="menu_sort">정렬</string>
    <string name="menu_view_type">보기</string>
    <string name="menu_view_type_basic">기본</string>
    <string name="menu_view_type_grid">그리드</string>
    <string name="menu_view_type_list">리스트</string>
    <string name="menu_open_report_content">신고하기</string>
    <string name="menu_show_content_id">게시글ID 확인</string>
    <string name="menu_request_change_name">이름변경</string>
    <string name="menu_request_update_info">정보 업데이트</string>
    <string name="menu_post_content">글쓰기</string>
    <string name="menu_open_match_activity">매치 상세정보</string>
    <string name="menu_open_match_chat_activity">매치 대화방</string>
    <string name="menu_show_league_table">순위보기</string>
    <string name="menu_show_match_id">매치아이디 확인</string>
    <string name="menu_match_report_rating_order">평점 정렬(기본)</string>
    <string name="menu_match_report_team_order">팀 정렬</string>
    <string name="menu_match_report_player_name_order">선수이름 정렬</string>
    <string name="menu_exclude_arena_chat">매치토크 감추기</string>
    <string name="menu_exclude_player_comment">매치리포트 감추기</string>
    <string name="menu_exclude_football_news">축구소식 감추기</string>
    <string name="title_change_player_name">선수이름 변경 요청</string>
    <string name="title_change_team_name">팀이름 변경 요청</string>
    <string name="positive">확인</string>
    <string name="negative">취소</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_menu_board_all">전체</string>
    <string name="nav_menu_board_football">축구</string>
    <string name="nav_menu_board_scout">선수스카우트</string>
    <string name="nav_menu_board_match_talk">매치토크</string>
    <string name="nav_menu_board_football_news">축구소식</string>
    <string name="nav_menu_board_general">자유게시판</string>
    <string name="nav_menu_board_column">칼럼</string>
    <string name="nav_menu_board_humor">눈팅베스트</string>
    <string name="nav_menu_board_instruction">설명서</string>
    <string name="nav_menu_board_club">클럽</string>
    <string name="nav_menu_board_player">플레이어</string>
    <string name="nav_menu_board_match_report">매치리포트</string>
    <string name="nav_menu_board_issue">건의 / 개선</string>
    <string name="nav_menu_board_report">신고</string>
    <string name="nav_menu_board_notification">공지</string>
    <string name="nav_menu_setting">설정</string>
    <string name="nav_logout">로그아웃</string>
    <string name="title_hint">( 제목을 입력하세요 )</string>
    <string name="insert_image_title">이미지 삽입 종류</string>
    <string-array name="insert_image_array">
        <item>로컬이미지</item>
        <item>링크이미지</item>
    </string-array>
    <string name="is_not_authorized_info">로그인 후 가능합니다.</string>
    <string name="complete_load_user_info">사용자 정보를 가져왔습니다</string>
    <string name="fail_load_user_info">사용자 정보를 읽기 실패</string>
    <string name="expire_token_info">토큰이 만료되었습니다.\n로그인을 다시해주세요.</string>
    <string name="deleted_comment_info">삭제된 댓글입니다.</string>
    <string name="delete_content_success">삭제 되었습니다</string>
    <string name="delete_content_fail">삭제중 오류가 발생했습니다</string>
    <string-array name="board_name">
        <item>해외</item>
        <item>국내</item>
        <item>일반</item>
        <item>클럽</item>
        <item>플레이어</item>
        <item>건의/개선</item>
    </string-array>
    <string-array name="issue_platform_name">
        <item>Common</item>
        <item>Android</item>
        <item>iOs</item>
        <item>Web</item>
    </string-array>
    <string-array name="main_tabs_array">
        <item>커뮤니티</item>
        <item>매치업</item>
        <item>데이터센터</item>
        <item>내소식</item>
    </string-array>
    <string-array name="match_tabs_array">
        <item>관련글</item>
        <item>기본정보</item>
        <item>라인업</item>
        <item>선수평</item>
        <item>순위</item>
        <item>타임라인</item>
    </string-array>
    <string-array name="player_tabs_array">
        <item>관련글</item>
        <item>정보</item>
        <item>기록</item>
        
        
    </string-array>
    <string-array name="team_tabs_array">
        <item>관련글</item>
        <item>정보</item>
        <item>일정</item>
        <item>선수</item>
        <item>기록</item>
        
    </string-array>
    <string-array name="nunting_tabs_array">
        <item>사이트</item>
        <item>게시판</item>
    </string-array>
    <string-array name="comp_tabs_array">
        <item>Match</item>
        <item>Standing</item>
    </string-array>
    <string-array name="admin_tabs_array">
        <item>Competition</item>
    </string-array>
    <string-array name="content_list_container_tabs_array">
        <item>리스트</item>
        <item>게시글</item>
    </string-array>
    <string-array name="match_up_container_tabs_array">
        <item>종료된 인기 매치</item>
        <item>라이브 매치</item>
        <item>다가오는 인기 매치</item>
        
        
        
        
    </string-array>
    <string-array name="posts_editor_tabs_array">
        <item>HTML</item>
        <item>일반</item>
        
        
    </string-array>
    <string name="dialog_edit_profile_title">사용자 프로필 변경</string>
    <string-array name="user_profile_tabs_array">
        <item>글</item>
        <item>댓글</item>
        <item>좋아요</item>
        <item>스크랩</item>
    </string-array>
    <string-array name="issue_tabs_array">
        <item>Open</item>
        <item>Close</item>
    </string-array>
    <string-array name="arena_tabs_array">
        <item>채팅</item>
        <item>라인업</item>
        
    </string-array>
    <string-array name="notification_tabs_array">
        <item>새알람</item>
        <item>읽은 알람</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_title_auto_login">자동 로그인</string>
    <string name="pref_title_push_message">푸시 메시지</string>
    <string name="pref_description_push_message">내가 등록한 글에 댓글, 공감, 신고와 같은 이벤트가 발생하면 푸시 메시지로 알림을 받을 수 있습니다.</string>
    <string name="pref_title_limits_count">데이터 조회시 가져올 항목 개수</string>
    <string name="pref_first_board">기본 게시판 선택</string>
    <string name="sign_up">회원가입</string>
    <string name="naver_client_name">하이파이브싸커</string>
    <string name="kakao_app_key">c33e931ae4fbe573af68f73a94bfec0f</string>
    <string name="permission_request_denied">권한 요청을 거부하였습니다</string>
    <string name="html" translatable="false">
        <![CDATA[
        <html>
            <head>
            <meta name=\viewport\tcontent=\width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi\ />
                <style type="text/css">
                    body {
                        font-size: %4$fpx;
                        line-height: %6$f;
                        color: #%2$s;
                        background-color: #%7$s;
                        margin: %5$fpx %5$fpx %5$fpx %5$fpx;
                    }
                    a {color: #%3$s;}
                    img {display: inline; height: auto; max-width: 100%%;}
                    pre {white-space: pre-wrap;}
                    iframe {width: 90vw; height: 50.625vw;} /* 16:9 */
                    video {display: inline; height: auto; max-width: 100%%;}
                </style>

                <style>
                    a:link    { text-decoration: none; color:#2c3e50}
                    a:visited {  text-decoration: none; color: #2c3e50}
                    a:active  {  text-decoration: none; color: #2c3e50}
                    h6 { color:green;}
                    .link {
                        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
                        transition: 0.3s;
                    }
                    .container {
                        padding: 2px 16px;
                    }
                </style>

            </head>
            <body>%1$s</body>
            </html>"
        ]]>
    </string>
    <string name="card_html" translatable="false">
        <![CDATA[
            <div class="link">
                <a href="%1$s">
                    <img src="%2$s">
                    <div class="container">
                      <h5><b>%3$s</b></h5>
                      <h6>%4$s</<h6>
                      <p>
                    </div>
                </a>
            </div>
        ]]>
    </string>
    <string name="video_html" translatable="false">
        <![CDATA[
            <div class=mv><p>
                <video controls autoplay %1$s
                src ="%2$s">
                </div><br><br>
                <div class=mv><p>
        ]]>
    </string>
    <string name="img_src" translatable="false">
        <![CDATA[
            <img src="%1$s">
        ]]>
    </string>
</resources>